force-app/main/default/objects/Campaign/fields/bizible2__Touchpoint_End_Date__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Touchpoint_End_Date__c</fullName>
    <description>The end date when Bizible should stop including Campaign Members for touchpoints</description>
    <inlineHelpText>The end date when Bizible should stop including Campaign Members for touchpoints</inlineHelpText>
    <label>Touchpoint End Date</label>
    <type>Date</type>
</CustomField>