force-app/main/default/objects/Campaign/fields/Campaign_Region__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Region__c</fullName>
    <description>TP Field</description>
    <label>Campaign Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>