force-app/main/default/objects/Campaign/fields/Certificate_of_Completion_Class__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Completion_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Completion Class</label>
    <type>Checkbox</type>
</CustomField>