force-app/main/default/objects/Campaign/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting/Finance</fullName>
            </value>
            <value>
                <fullName>Corporate Communications</fullName>
            </value>
            <value>
                <fullName>Customer Service/Care/Support</fullName>
            </value>
            <value>
                <fullName>Exec - &quot;C&quot; Level</fullName>
            </value>
            <value>
                <fullName>HR Generalist</fullName>
            </value>
            <value>
                <fullName>HR Recruiting</fullName>
            </value>
            <value>
                <fullName>IT/IS</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>