force-app/main/default/objects/Campaign/fields/Employee_Cost__c.field-meta.xml
<CustomField>
    <fullName>Employee_Cost__c</fullName>
    <inlineHelpText>$50 per hour, per employee for event attendance, telemarketing campaigns and email campaigns</inlineHelpText>
    <label>Employee Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>