force-app/main/default/objects/Campaign/fields/iMC_Campaign_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Campaign_Record_ID__c</fullName>
    <label>iMC Campaign Record ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>