force-app/main/default/objects/Campaign/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>This field represents the job titles used for a telemarketing list pull.</description>
    <label>Job Title</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Titles</fullName>
            </value>
            <value>
                <fullName>Sales - All Titles</fullName>
            </value>
            <value>
                <fullName>Marketing - All Titles</fullName>
            </value>
            <value>
                <fullName>IT - All Titles</fullName>
            </value>
            <value>
                <fullName>Director of Marketing</fullName>
            </value>
            <value>
                <fullName>Director of Sales</fullName>
            </value>
            <value>
                <fullName>VP of Sales</fullName>
            </value>
            <value>
                <fullName>VP of Marketing</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>IT Manager</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>