force-app/main/default/objects/Campaign/fields/Link_to_content_event__c.field-meta.xml
<CustomField>
    <fullName>Link_to_content_event__c</fullName>
    <description>TP Field</description>
    <label>Link to content/event</label>
    <type>Url</type>
</CustomField>