force-app/main/default/objects/Campaign/fields/MQLs_Generated__c.field-meta.xml
<CustomField>
    <fullName>MQLs_Generated__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText># of MQLs generated per the SLA</inlineHelpText>
    <label>MQLs Generated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>