force-app/main/default/objects/Campaign/fields/of_Campaign__c.field-meta.xml
<CustomField>
    <fullName>of_Campaign__c</fullName>
    <description>Power of One</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>