force-app/main/default/objects/Campaign/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>This field represents the partner campaign source for list pulls, etc.</description>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3VL</fullName>
            </value>
            <value>
                <fullName>Acteva</fullName>
            </value>
            <value>
                <fullName>akaCRM</fullName>
            </value>
            <value>
                <fullName>AMA</fullName>
            </value>
            <value>
                <fullName>Annuitas</fullName>
            </value>
            <value>
                <fullName>Astadia</fullName>
            </value>
            <value>
                <fullName>Bluewolf</fullName>
            </value>
            <value>
                <fullName>BMA</fullName>
            </value>
            <value>
                <fullName>Card Browser</fullName>
            </value>
            <value>
                <fullName>Couch</fullName>
            </value>
            <value>
                <fullName>CTA</fullName>
            </value>
            <value>
                <fullName>Denver/Boulder Software Club</fullName>
            </value>
            <value>
                <fullName>Denver Chamber</fullName>
            </value>
            <value>
                <fullName>Downtown Denver Partnership</fullName>
            </value>
            <value>
                <fullName>Eloqua</fullName>
            </value>
            <value>
                <fullName>ExactTarget</fullName>
            </value>
            <value>
                <fullName>Frost &amp; Sullivan</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>Kapost</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>MecLabs</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NCNA</fullName>
            </value>
            <value>
                <fullName>NetProspex</fullName>
            </value>
            <value>
                <fullName>Networld Alliance</fullName>
            </value>
            <value>
                <fullName>OneSource</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>PRNewswire</fullName>
            </value>
            <value>
                <fullName>ReachForce</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>