force-app/main/default/objects/Campaign/fields/Product_Family_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Interest__c</fullName>
    <label>Product Family Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automated Audio</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Operator Assisted</fullName>
            </value>
            <value>
                <fullName>Skype for Business</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Unified Communications</fullName>
            </value>
            <value>
                <fullName>Webcast</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>