force-app/main/default/objects/Campaign/fields/Products_in_Scope__c.field-meta.xml
<CustomField>
    <fullName>Products_in_Scope__c</fullName>
    <label>Products in Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audio: GlobalMeet Audio</fullName>
            </value>
            <value>
                <fullName>Audio: GlobalMeet Audio for Skype for Business</fullName>
            </value>
            <value>
                <fullName>Audio: GlobalMeet Hybrid Audio for Lync Server</fullName>
            </value>
            <value>
                <fullName>Audio: GlobalMeet Hybrid Audio for WebEx</fullName>
            </value>
            <value>
                <fullName>Audio: GlobalMeet Webinar Managed Event</fullName>
            </value>
            <value>
                <fullName>Audio: iMeet</fullName>
            </value>
            <value>
                <fullName>Audio: OnNet</fullName>
            </value>
            <value>
                <fullName>Audio: Op. Assisted: Premium Event</fullName>
            </value>
            <value>
                <fullName>Audio: Op. Assisted: Standard Auditorium</fullName>
            </value>
            <value>
                <fullName>Bundle: GlobalMeet</fullName>
            </value>
            <value>
                <fullName>Bundle: GlobalMeet Webinar</fullName>
            </value>
            <value>
                <fullName>Bundle: iMeet</fullName>
            </value>
            <value>
                <fullName>Bundle: iMeet Sales Accelerator</fullName>
            </value>
            <value>
                <fullName>Bundle: iMeet VRC</fullName>
            </value>
            <value>
                <fullName>Partner: Partner BD</fullName>
            </value>
            <value>
                <fullName>Professional Services: Modality Consulting</fullName>
            </value>
            <value>
                <fullName>Professional Services: Modality Custom Development</fullName>
            </value>
            <value>
                <fullName>Professional Services: Modality Support &amp; Managed Services</fullName>
            </value>
            <value>
                <fullName>Video: Managed Conference</fullName>
            </value>
            <value>
                <fullName>Video: Managed Service - Device</fullName>
            </value>
            <value>
                <fullName>Video: Managed Service - Flat Rate</fullName>
            </value>
            <value>
                <fullName>Video: Professional Service</fullName>
            </value>
            <value>
                <fullName>Web: AdobeConnect</fullName>
            </value>
            <value>
                <fullName>Web: Cisco WebEx</fullName>
            </value>
            <value>
                <fullName>Web: GlobalMeet</fullName>
            </value>
            <value>
                <fullName>Web: GlobalMeet Active Host</fullName>
            </value>
            <value>
                <fullName>Web: GlobalMeet Web for Microsoft Lync</fullName>
            </value>
            <value>
                <fullName>Web: GlobalMeet Webinar</fullName>
            </value>
            <value>
                <fullName>Web: GlobalMeet Webinar Managed Event</fullName>
            </value>
            <value>
                <fullName>Web: iMeet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>