force-app/main/default/objects/Campaign/fields/RT_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Campaign_Id__c</fullName>
    <externalId>true</externalId>
    <label>RT Campaign Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>