force-app/main/default/objects/Campaign/fields/Total_Bounces__c.field-meta.xml
<CustomField>
    <fullName>Total_Bounces__c</fullName>
    <label>Total Bounces</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Bounced</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>