force-app/main/default/objects/Campaign/fields/Total_Campaign_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaign_Cost__c</fullName>
    <label>Total Campaign Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>