force-app/main/default/objects/Campaign/fields/Total_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Total_Clicks__c</fullName>
    <label>Total Clicks</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Clicked</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>