force-app/main/default/objects/Campaign/fields/Total_No_Shows__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Shows__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total No-Shows</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>