force-app/main/default/objects/Campaign/fields/Total_Registered__c.field-meta.xml
<CustomField>
    <fullName>Total_Registered__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates number of registered participants for a web seminar.</description>
    <label>Total Registered</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>