force-app/main/default/objects/Campaign/recordTypes/iMC_Campaign.recordType-meta.xml
<RecordType>
    <fullName>iMC_Campaign</fullName>
    <active>false</active>
    <description>iMeet Central Campaign Records</description>
    <label>iMC Campaign</label>
</RecordType>