force-app/main/default/objects/Campaign/recordTypes/PGi_Campaign.recordType-meta.xml
<RecordType>
    <fullName>PGi_Campaign</fullName>
    <active>true</active>
    <label>PGi Campaign</label>
</RecordType>