force-app/main/default/objects/Campaign/recordTypes/ReadyTalk_Campaign.recordType-meta.xml
<RecordType>
    <fullName>ReadyTalk_Campaign</fullName>
    <active>true</active>
    <label>ReadyTalk Campaign</label>
</RecordType>