force-app/main/default/objects/Campaign/recordTypes/TalkPoint_Camaign.recordType-meta.xml
<RecordType>
    <fullName>TalkPoint_Camaign</fullName>
    <active>false</active>
    <label>TalkPoint Camaign</label>
</RecordType>