force-app/main/default/objects/Campaign/listViews/All_Active_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Active_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Active Campaigns</label>
    <language>en_US</language>
</ListView>