force-app/main/default/objects/Campaign/listViews/All_Campaigns_Created_Last_30_days.listView-meta.xml
<ListView>
    <fullName>All_Campaigns_Created_Last_30_days</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>All Campaigns - Created Last 30 days</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>PGi_Channel_C_Level</roleAndSubordinates>
    </sharedTo>
</ListView>