force-app/main/default/objects/Campaign/listViews/All_Campaigns_created_THIS_WEEK.listView-meta.xml
<ListView>
    <fullName>All_Campaigns_created_THIS_WEEK</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>All Campaigns created THIS WEEK</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>PGi_Channel_C_Level</roleAndSubordinates>
    </sharedTo>
</ListView>