force-app/main/default/objects/Campaign/listViews/All_Campaigns_Last_90_Days_with_Opp_Wins.listView-meta.xml
<ListView>
    <fullName>All_Campaigns_Last_90_Days_with_Opp_Wins</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NUM_WON_OPPORTUNITIES</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All Campaigns Last 90 Days with Opp Wins</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>PGi_Channel_C_Level</roleAndSubordinates>
    </sharedTo>
</ListView>