force-app/main/default/objects/Campaign/listViews/All_Campaigns_wthn_Opp_Wins.listView-meta.xml
<ListView>
    <fullName>All_Campaigns_wthn_Opp_Wins</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NUM_WON_OPPORTUNITIES</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All Campaigns wthn Opp Wins</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>PGi_Channel_C_Level</roleAndSubordinates>
    </sharedTo>
</ListView>