force-app/main/default/objects/Campaign/listViews/All_iMC_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_iMC_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.iMC_Campaign</value>
    </filters>
    <label>All iMC Campaigns</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>