force-app/main/default/objects/Campaign/listViews/All_Inactive_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Inactive_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive Campaigns</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>PGi_Channel_C_Level</roleAndSubordinates>
    </sharedTo>
</ListView>