force-app/main/default/objects/Campaign/listViews/Bizible_Campaign_Include_Only_Responded.listView-meta.xml
<ListView>
    <fullName>Bizible_Campaign_Include_Only_Responded</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>bizible2__Bizible_Attribution_SyncType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bizible2__Bizible_Attribution_SyncType__c</field>
        <operation>equals</operation>
        <value>Include only &quot;Responded&quot; Campaign Members</value>
    </filters>
    <label>Bizible Campaign Include Only Responded</label>
    <language>en_US</language>
</ListView>