force-app/main/default/objects/Campaign/listViews/EMEA_Campaign_list_Hardeep.listView-meta.xml
<ListView>
    <fullName>EMEA_Campaign_list_Hardeep</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>bizible2__Bizible_Attribution_SyncType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bizible2__Bizible_Attribution_SyncType__c</field>
        <operation>contains</operation>
        <value>Include,Exclude</value>
    </filters>
    <label>Bizible Touchpoints Enabled</label>
    <language>en_US</language>
    <sharedTo>
        <group>PGi_Marketing_APAC</group>
        <group>PGi_Marketing_EMEA</group>
        <group>PGi_Marketing_NA</group>
    </sharedTo>
</ListView>