force-app/main/default/objects/Campaign/listViews/Madison_Logic_Campaigns_1.listView-meta.xml
<ListView>
    <fullName>Madison_Logic_Campaigns_1</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Department__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.ID</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Madison Logic</value>
    </filters>
    <label>Madison Logic Campaigns 1</label>
    <language>en_US</language>
    <sharedTo>
        <group>PGi_Marketing_NA</group>
    </sharedTo>
</ListView>