force-app/main/default/objects/Campaign/listViews/Mod_All_Active_Campaigns_Aborted.listView-meta.xml
<ListView>
    <fullName>Mod_All_Active_Campaigns_Aborted</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>AMOUNT_WON</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Aborted</value>
    </filters>
    <label>All Active Campaigns Aborted</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>